fix(radio): spacing fixed
affects: @synerise/ds-radio, storybook7

--- a/packages/components/button/src/style/button.mixin.less
+++ b/packages/components/button/src/style/button.mixin.less
@@ -632,6 +632,7 @@
 
 .@{btn-prefix-cls}-sm {
   padding: 0 12px;
+  font-size: 13px;
 }
 
 .@{btn-prefix-cls} {
